java and server changes